--- a/style.css
+++ b/style.css
@@ -49,3 +49,38 @@ html {
     font-size: larger;
     
   }
+  .icon-bar{
+    display: flex;
+}
+.icon-bar a{
+    flex:1;
+}
+
+.icon-bar a {
+  flex:1;
+  text-align: center;
+  padding:1.5rem;
+  border-left:1px solid rgba(0,0,0,0.1);
+  background:linear-gradient(260deg,pink 0%, rgb(230, 247, 85) 100%);
+  color:black;
+}
+
+.icon-bar a:first-child {
+  border-left: 0;
+}
+
+.icon-bar a:first-child, .icon-bar a:hover {
+  border-bottom: 5px solid rgba(0,0,0,0.1);
+}
+
+.icon-bar {
+  border-top:1px solid #E6E6E6;
+}
+
+.icon-bar i {
+  display: block;
+  font-size: 2.5rem;
+  color:black;
+  text-shadow:3px 3px 0 rgba(0,0,0,0.1);
+  padding-bottom: 1rem;
+}
