--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ html {
     height: 100%;
     margin: 0vh auto 0vh auto;
     border:10px solid rgba(0,0,0,0.8);
+    border-top-width: 50px;
     border-bottom-width: 70px;
     border-radius:0.5px;
     box-shadow:0 0 50px  rgba(0,0,0,0.3);
