--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ html {
  
   .wrapper{
     max-width: 540px;
-    height: 100%;
+    height: 100vh;
     margin: 0vh auto 0vh auto;
     border:10px solid rgba(0,0,0,0.8);
-    border-top-width: 50px;
-    border-bottom-width: 70px;
+    border-top-width: 30px;
+    border-bottom-width: 40px;
     border-radius:0.5px;
     box-shadow:0 0 50px  rgba(0,0,0,0.3);
     display: flex;
@@ -109,7 +109,10 @@ html {
     
   
   }
-
+  .content{
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
   
 
 }
